// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`local integration test getFeatureValue, changeFeatureValue 2`] = `Array []`;

exports[`local integration test getFeatureValue, changeFeatureValue 3`] = `
Array [
  Array [
    "%s | %O",
    "caught error event: connect ECONNREFUSED 127.0.0.1:6379",
    Object {
      "clientName": "main",
    },
  ],
  Array [
    "%s | %O",
    "error during client quit: connect ECONNREFUSED 127.0.0.1:6379",
    Object {
      "clientName": "main",
    },
  ],
]
`;

exports[`local integration test getFeatureValue, changeFeatureValue 4`] = `Array []`;

exports[`local integration test getFeatureValue, changeFeatureValue 5`] = `Array []`;

exports[`local integration test getFeatureValue, changeFeatureValue 6`] = `
Array [
  Array [
    "error during change remote feature values, switching to local update",
  ],
]
`;

exports[`local integration test getFeatureValue, changeFeatureValue 7`] = `Array []`;

exports[`local integration test getFeatureValues, getFeatureConfigs 1`] = `
Object {
  "test/feature_a": Object {
    "appUrlActive": true,
    "fallbackValue": false,
    "fallbackValueValidation": Array [
      false,
    ],
    "type": "boolean",
    "validationRegExp": null,
  },
  "test/feature_b": Object {
    "appUrlActive": true,
    "fallbackValue": 1,
    "fallbackValueValidation": Array [
      1,
    ],
    "type": "number",
    "validationRegExp": null,
  },
  "test/feature_c": Object {
    "appUrlActive": true,
    "fallbackValue": "best",
    "fallbackValueValidation": Array [
      "best",
    ],
    "type": "string",
    "validationRegExp": null,
  },
  "test/feature_d": Object {
    "appUrlActive": true,
    "fallbackValue": true,
    "fallbackValueValidation": Array [
      true,
    ],
    "type": "boolean",
    "validation": "^(?:true)$",
    "validationRegExp": /\\^\\(\\?:true\\)\\$/,
  },
  "test/feature_e": Object {
    "appUrlActive": true,
    "fallbackValue": 5,
    "fallbackValueValidation": Array [
      5,
    ],
    "type": "number",
    "validation": "^\\\\d{1}$",
    "validationRegExp": /\\^\\\\d\\{1\\}\\$/,
  },
  "test/feature_f": Object {
    "appUrlActive": true,
    "fallbackValue": "best",
    "fallbackValueValidation": Array [
      "best",
    ],
    "type": "string",
    "validation": "^(?:best|worst)$",
    "validationRegExp": /\\^\\(\\?:best\\|worst\\)\\$/,
  },
  "test/feature_g": Object {
    "active": false,
    "appUrlActive": true,
    "fallbackValue": "activeTest",
    "fallbackValueValidation": Array [
      "activeTest",
    ],
    "type": "string",
    "validationRegExp": null,
  },
  "test/feature_h": Object {
    "appUrl": "\\\\.cfapps\\\\.sap\\\\.hana\\\\.ondemand\\\\.com$",
    "appUrlActive": true,
    "fallbackValue": "appUrlTest",
    "fallbackValueValidation": Array [
      "appUrlTest",
    ],
    "type": "string",
    "validationRegExp": null,
  },
}
`;

exports[`local integration test getFeatureValues, getFeatureConfigs 2`] = `Array []`;

exports[`local integration test getFeatureValues, getFeatureConfigs 3`] = `
Array [
  Array [
    "%s | %O",
    "caught error event: connect ECONNREFUSED 127.0.0.1:6379",
    Object {
      "clientName": "main",
    },
  ],
  Array [
    "%s | %O",
    "error during client quit: connect ECONNREFUSED 127.0.0.1:6379",
    Object {
      "clientName": "main",
    },
  ],
]
`;

exports[`local integration test getFeatureValues, getFeatureConfigs 4`] = `Array []`;

exports[`local integration test getFeatureValues, getFeatureConfigs 5`] = `
Array [
  Array [
    "finished initialization with %i feature toggle%s",
    8,
    "s",
  ],
]
`;

exports[`local integration test getFeatureValues, getFeatureConfigs 6`] = `
Array [
  Array [
    "error during initialization, using fallback values",
  ],
]
`;

exports[`local integration test getFeatureValues, getFeatureConfigs 7`] = `Array []`;
